--- a/pong.kv
+++ b/pong.kv
@@ -51,6 +51,14 @@
             center_x: root.center_x
             center_y: root.center_y            
             text: str(root.pop_up.text)
+    Button:
+        text: "||"
+        size: 20, 20
+        center: root.width / 2 , root.height / 2
+        on_press: 
+            root.stop_ball()
+            root.pause.exist = 1
+
 
     Message:
         id: pause
@@ -66,10 +74,12 @@
                 text: 'return'
                 font_size: root.pause.exist*40
                 background_color: (1, 1, 1, root.pause.exist)
+                on_press: root.click('r')
             Button:
                 text: 'start\nover'
                 font_size: root.pause.exist*40
                 background_color: (1, 1, 1, root.pause.exist)
+                on_press: root.click('s')
 
 
 <PongBall>:
